apps/staging/web/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-http
  namespace: harrytang-staging
spec:
  parentRefs:
    - name: harrytang
      namespace: gateway
      sectionName: http
  hostnames:
    - next.harrytang.xyz
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-https
  namespace: harrytang-staging
spec:
  parentRefs:
    - name: harrytang
      namespace: gateway
      sectionName: https
  hostnames:
    - next.harrytang.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web-srv
          port: 3000
