apps/staging/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: harrytang-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
spec:
  tls:
    - hosts:
        - next.harrytang.xyz
      secretName: web-tls
  rules:
    - host: next.harrytang.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-srv
                port:
                  number: 3000
